# Karma

./: README.md  pyproject.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: tech-spec-karma-mcp-server.md
docs/: KARMA_LOG.md  karma-log-standard.md
karma/: __init__.py  briefcase.py  health.py  mcp_server.py  utils.py
scripts/: briefcase.py  health.py  mcp_server.py
tests/: test_briefcase.py  test_health.py  test_mcp_server.py  test_utils.py
